mule-user-guide/v/3.7/jboss-transaction-manager-reference.adoc
= JBoss Transaction Manager Reference
:keywords: mule, esb, studio, jboss, bpms

This module enables Mule to use the JBoss transaction manager (previously Arjuna) to configure link:/mule-user-guide/v/3.7/xa-transactions[XA transactions]. Developers can configure one Transaction Manger per Mule instance. For more information, see link:http://www.jboss.org/jbosstm/[JBoss Transactions], link:/mule-user-guide/v/3.7/deploying-mule-to-jboss[Deploying Mule to JBoss], link:/mule-user-guide/v/3.7/transaction-management[Transaction Management], link:/mule-user-guide/v/3.7/jboss-jbpm-module-reference[JBoss jBPM Module Reference].

== Configuration

To configure an instance of the JBoss transaction manager within Mule, add this element to your Mule XML config file. You can configure arbitrary properties on the transaction manager that are passed on to the underlying transaction manager. For example:

[source, xml, linenums]
----
<jbossts:transaction-manager>
    <property key="test" value="TEST"/>
</jbossts:transaction-manager>
----

You can then declare XA transactions on endpoints supporting XA transactions, and all those transactions are managed by the JBoss transaction manager. Mule auto-generates the transaction manager XA node ID. To specify the ID yourself, add the following property:

[source, xml, linenums]
----
<jbossts:transaction-manager>
    <properties>
        <spring:entry key="com.arjuna.ats.arjuna.xa.nodeIdentifier" value="SomeUserNodeId"/>
    </properties>
</jbossts:transaction-manager>
----

== Additional Properties for the JBoss Transaction Manager

You can configure many properties for the JBoss Transaction Manager. These configurable properties are detailed link:http://docs.jboss.org/jbosstm/docs/4.2.3/javadoc/jts/com/arjuna/ats/arjuna/common/Environment.html[in the Environment class].

The following is an example that demonstrates how to configure properties related to transaction timeout.

=== Configuring Transaction Timeout Properties

There are two properties that relate to timeouts for JBoss transactions. (Note that the information for timeout properties comes from link:http://docs.jboss.org/jbosstm/docs/4.2.3/manuals/html/core/ProgrammersGuide.html#_Toc22872822[here]).

* com.arjuna.ats.arjuna.coordinator.defaultTimeout
** This defaultTimeout property defines the timeout period for each transaction created for this manager. Transactions that have not terminated before the timeout value expires are automatically rolled back. The default value is 60 seconds.
* com.arjuna.ats.arjuna.coordinator.txReaperTimeout
** JBossTS uses a separate reaper thread that monitors all locally created transactions and forces them to roll back if their timeouts elapse. To prevent this reaper thread from consuming application time, it only runs periodically. By default, the reaper thread is set to monitor locally transactions every 120000 milliseconds. You can override this default value by setting the txReaperTimeout property. Note that if the defaultTimeout property value is less than the txReaperTimeout property value, the reaper thread checks for transactions once every defaultTimeout seconds.

[source, xml, linenums]
----
<jbossts:transaction-manager >
    <property key="com.arjuna.ats.arjuna.coordinator.defaultTimeout" value="47" /><!-- this is in seconds -->
    <property key="com.arjuna.ats.arjuna.coordinator.txReaperTimeout" value="108000"/><!-- this is in milliseconds -->
</jbossts:transaction-manager>
----

== See Also

* link:http://forums.mulesoft.com[MuleSoft's Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
